# greprs

./: .gitignore  Cargo.toml  README.md
benchmark/: compare.py
src/: cli.rs  lib.rs  main.rs  search.rs  test.txt  utils.rs
tests/: tests.rs
