[package]
name = "greprs"
version = "0.1.0"
edition = "2024"
authors = ["Ben Weinstein <brweinstein68@gmail.com"]
description = "A barebones grep clone in Rust"
license = "MIT"
repository = "https://github.com/brweinstein/greprs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
rayon = "1"